# aixplain-github-actions

./: .env_example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  action.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: create_release.yaml  pr_automated_review.yaml
src/: ai_assistent.py  chatgpt.py  chatgpt_pr.py  execute.py  github.py  github_pr.py  google_gemini.py  main.py
tests/integration/: test_chatgpt.py
tests/unit/: test_ai_assistent.py  test_chatgpt.py
